--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.20",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.13",
+    "mongoose-paginate-v2": "^1.3.11",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.16"
   },
