--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^5.10.13",
     "mongoose-paginate-v2": "^1.3.11",
     "morgan": "^1.10.0",
-    "nanoid": "^3.1.16"
+    "nanoid": "^3.1.16",
+    "nodemon": "^2.0.6"
   },
   "devDependencies": {},
   "scripts": {
