--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "avatarholder": "^1.0.6",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -16,6 +17,7 @@
     "mongoose": "^5.10.13",
     "mongoose-paginate-v2": "^1.3.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nanoid": "^3.1.16",
     "nodemon": "^2.0.6"
   },
