--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.0",
     "avatarholder": "^1.0.6",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
@@ -19,7 +20,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nanoid": "^3.1.16",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {},
   "scripts": {
